fix: v1.1.4 - Fix transforms, gradients, and add logo to examples
- Fix transform utilities (scale, rotate, translate) to apply transform directly
- Add missing predefined gradient classes (primary, sunset, ocean, fire, etc.)
- Make dark-mode-demo header sticky
- Add KardoCSS logo to all example pages
- Update CHANGELOG with v1.1.4 entry

--- a/examples/dark-mode-demo.html
+++ b/examples/dark-mode-demo.html
@@ -17,9 +17,12 @@
 </head>
 <body class="k-bg-gray-100 dark:k-bg-gray-900 k-text-gray-900 dark:k-text-gray-100">
     <!-- Header with Dark Mode Toggle -->
-    <header class="k-bg-white dark:k-bg-gray-800 k-border-b k-border-gray-200 dark:k-border-gray-700 k-py-4">
+    <header class="k-sticky k-top-0 k-z-50 k-bg-white dark:k-bg-gray-800 k-border-b k-border-gray-200 dark:k-border-gray-700 k-py-4 k-shadow-sm">
         <div class="k-container k-flex k-justify-between k-items-center">
-            <h1 class="k-text-2xl k-font-bold k-text-primary">KardoCSS</h1>
+            <div class="k-flex k-items-center k-gap-3">
+                <img src="../assets/KardoCSS.png" alt="KardoCSS Logo" style="height: 40px; width: auto;">
+                <h1 class="k-text-2xl k-font-bold k-text-primary">KardoCSS</h1>
+            </div>
             
             <!-- Dark Mode Toggle Button -->
             <button 
