--- a/examples/index.html
+++ b/examples/index.html
@@ -15,6 +15,7 @@
     <!-- Header -->
     <header class="k-bg-primary k-text-white k-py-8 md:k-py-12 lg:k-py-16">
         <div class="k-container k-text-center">
+            <img src="../assets/KardoCSS.png" alt="KardoCSS Logo" class="k-mx-auto k-mb-4" style="max-width: 300px; height: auto;">
             <h1 class="k-text-3xl md:k-text-4xl lg:k-text-5xl k-font-bold k-mb-2">KardoCSS</h1>
             <p class="k-text-lg md:k-text-xl lg:k-text-2xl k-mb-2">Framework CSS Mobile-First Ultra-Ligero</p>
             <p class="k-text-sm md:k-text-base k-opacity-90">Solo 87.8 KB minificado con variantes responsive completas</p>
