--- a/examples/transitions-demo.html
+++ b/examples/transitions-demo.html
@@ -29,6 +29,7 @@
     <!-- Header -->
     <header class="k-bg-primary k-text-white k-py-8">
         <div class="k-container k-text-center">
+            <img src="../assets/KardoCSS.png" alt="KardoCSS Logo" class="k-mx-auto k-mb-4" style="max-width: 250px; height: auto;">
             <h1 class="k-text-3xl k-font-bold k-mb-2">Demo de Transiciones</h1>
             <p class="k-text-lg">KardoCSS v1.1.1 - Issue #1 Implementation</p>
         </div>
